ipersonalización del administrador

--- a/services/templates/services/services.html
+++ b/services/templates/services/services.html
@@ -5,7 +5,7 @@
 {% block title %}Servicios{% endblock %}
 
 {% block content %}
-{% for service in services %}
+{% for service in services reversed %}
     <section class="page-section">
       <div class="container">
         <div class="product-item">
